Pass over queue and testing